# gitter-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.aarch64-pc-windows-gnullvm.Dockerfile  Cross.toml  Makefile.toml  README.md  create_test_repos.sh  print_placeholders.sh  {_commit:c_}
.cargo/: Config.toml
.github/workflows/: rust-ci.yml
scripts/: print_placeholders.sh
src/: colors.rs  directory.rs  gitter.rs  main.rs  palette.rs  placeholder.rs  repository.rs  repository_helper.rs  status.rs
src/cli/: gitter.rs  mod.rs
src/cli/gitter/: bool_choice.rs  command_args.rs  completion_args.rs  help_args.rs  (+5 more)
src/command/: cli.rs  completion.rs  list.rs  mod.rs
src/core/: directory.rs  mod.rs  repository.rs
src/directory/: find_repo_dirs.rs  ignore.rs  mod.rs
src/gitter/: cli.rs
src/gitter_command/: bash.rs  completion.rs  exec.rs  git.rs  help.rs  list.rs  meta.rs  mod.rs  script.rs  state.rs
src/help/: mod.rs  print_completion_help.rs  print_filter_help.rs  print_gitterignore_help.rs  print_placeholder_help.rs
src/macros/: mod.rs  printer.rs
src/meta/: metadata.rs  mod.rs
src/placeholder/: holder.rs  mod.rs  processor.rs
src/repositories/: build_status.rs  mod.rs  print_status.rs  repositories.rs
src/repository/: filter_repositories.rs  find_repo_dirs.rs  generate_properties.rs  mod.rs  print_info.rs  print_status.rs  repositories.rs
src/style/: mod.rs
tests/: exec_tests.rs  help_tests.rs  list_tests.rs  main.rs  provision.rs
tests/integration/: exec_tests.rs  filter_tests.rs  gitter_tests.rs  help_tests.rs  list_tests.rs  mod.rs
(+52 files in other folders)
