[package]
name = "gitter-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
colored = "3.1.1"
git2 = "0.21.0"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"

[[bin]]
name = "gitter"
path = "src/main.rs"
