[package]
name = "gitter-rs"
version = "0.1.3"
authors = ["indrajit"]
edition = "2024"
rust-version = "1.96.0"
description = "A fast, concurrent CLI utility for running commands across multiple Git repositories."
documentation = "https://docs.rs/gitter-rs"
readme = "README.md"
homepage = "https://github.com/eendroroy/gitter-rs"
repository = "https://github.com/eendroroy/gitter-rs"
license = "AGPL-3.0"
keywords = ["git"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["target", ".github", ".cargo/cross", "Cross.toml", "Makefile.toml"]

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.5"
colored = "3.1.1"
git2 = "0.21.0"
lazy_static = "1.5.0"
regex = "1.12.4"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
pathdiff = "0.2.3"
tokei = "14.0.0"

[[bin]]
name = "gitter"
path = "src/main.rs"
